--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <!-- <model-viewer> HTML element -->
-  <model-viewer id="model" src="rect.glb" alt="A 3D model" ar ar-modes="webxr scene-viewer quick-look" camera-controls
-    tone-mapping="neutral" poster="poster.webp" shadow-intensity="0.1" style="background-color: #353f55;;">
+  <model-viewer id="model" src="rect.glb" alt="A 3D model" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls
+    tone-mapping="neutral" poster="poster.webp" shadow-intensity="0.01" style="background-color: #353f55;;">
 
 
 
@@ -134,10 +134,12 @@
             }
           }
         }
-
+        var size = modelViewer.getDimensions();
         const dimLines = modelViewer.querySelectorAll('line');
         console.log("line element: " + dimLines[0]);
         const renderSVG = () => {
+          size = modelViewer.getDimensions();
+          console.log("Scene scale: "+size);
           drawLine(dimLines[0], modelViewer.queryHotspot('hotspot-dot+X-Y+Z'), modelViewer.queryHotspot('hotspot-dot+X-Y-Z'), modelViewer.queryHotspot('hotspot-dim+X-Y'));
           drawLine(dimLines[1], modelViewer.queryHotspot('hotspot-dot+X-Y-Z'), modelViewer.queryHotspot('hotspot-dot+X+Y-Z'), modelViewer.queryHotspot('hotspot-dim+X-Z'));
           drawLine(dimLines[2], modelViewer.queryHotspot('hotspot-dot+X+Y-Z'), modelViewer.queryHotspot('hotspot-dot-X+Y-Z')); // always visible
@@ -147,7 +149,7 @@
 
       
           const center = modelViewer.getBoundingBoxCenter();
-          const size = modelViewer.getDimensions();
+          size = modelViewer.getDimensions();
           const x2 = size.x / 2;
           const y2 = size.y / 2;
           const z2 = size.z / 2;
@@ -162,7 +164,7 @@
             position: `${center.x + x2 * 1.2} ${center.y - y2 * 1.1} ${center.z}`
           });
           modelViewer.querySelector('button[slot="hotspot-dim+X-Y"]').textContent =
-            `${((size.z * 100)/30.48).toFixed(0)} ft`;
+            `${((size.z * 100)/30.48).toFixed(0.0)} ft`;
 
           modelViewer.updateHotspot({
             name: 'hotspot-dot+X-Y-Z',
