--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="ar_hand_prompt.png">
     </div>
 
-    <div id="info">Loading...</div>
+   
 
     <!-- Hotspots for dimension markers -->
     <button slot="hotspot-dot+X-Y+Z" class="dot" data-position="1 -1 1" data-normal="1 0 0"></button>
@@ -60,6 +60,7 @@
       <input id="show-dimensions" type="checkbox" checked="true">
     </div>
 
+    <div id="info">Loading...</div>
 
   </model-viewer>
 
@@ -382,6 +383,7 @@
       top: 10px;
       left: 10px;
       background: white;
+      display: block;
       padding: 10px;
       border: 1px solid #ccc;
       z-index: 10;
